# HackBAY

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  router.py  utils.py
devguard/: README.md  app.py  devguard_cli.py  example.java  file_event_queue.py  file_watcher.py  requirements.txt  router.py  utils.py
devguard/frontend/: llm_assistant_ui.py
devguard/tool_metadata/: code_review.json  internal_guideline_compliance_checker.json  library_license_checker.json  open_deep_research.json
devguard/tools/code_review/: helpers.py  main.py  pyproject.toml  ui.py
devguard/tools/deep-research/: ui.py
devguard/tools/deep-research/open_deep_research-main/.langgraph_api/: .langgraph_ops.pckl
devguard/tools/deep-research/open_deep_research-main/src/open_deep_research/: configuration.py  main.py  multi_agent.py  prompts.py  utils.py
devguard/tools/internal_guideline_compliance_checker/: compliance_checker.py  main.py  pyproject.toml  ui.py  utils.py
devguard/tools/library_license_checker/: helpers.py  license_api.py  license_utils.py  main.py  ui.py
devguard/tools/sustainability_checker/: pmd_report.xml  pmd_scorer.py  run.sh  setup.sh
frontend/: llm_assistant_ui.py
tool_metadata/: internal_guideline_compliance_checker.json  library_license_checker.json
tools/internal_guideline_compliance_checker/: compliance_checker.py  main.py  ui.py  utils.py
tools/library_license_checker/: helpers.py  license_api.py  main.py  normalization.py  ui.py
tools/library_license_checker/config/: license_map.py
